# gmailcal-mcp-rs

./: .env.example  .gitignore  CLAUDE.md  COVERAGE_TRACKING.md  Cargo.toml  README.md  mise.toml  missing-tests.md  plan.md  proper_test.sh  test_list_emails.sh  testing_plan.md
.github/workflows/: auto-tag.yml  benchmarks.yml  ci.yml  coverage-pr.yml  coverage.yml  docs.yml  release.yml  (+1 more)
benches/: benchmarks.rs
docs/: README.md  api.md  architecture.md  development.md  errors.md
src/: auth.rs  calendar_api.rs  cli.rs  config.rs  errors.rs  gmail_api.rs  lib.rs  logging.rs  main.rs  oauth.rs  people_api.rs  prompts.rs  server.rs  token_cache.rs  utils.rs
tests/: TESTS.md  auth_module_tests.rs  calendar_api_mock_tests.rs  calendar_api_tests.rs  calendar_validation_tests.rs  config_module_tests.rs  config_tests.rs  error_recovery_tests.rs  error_tests.rs  extended_integration_tests.rs  gmail_api_integration_tests.rs  gmail_api_mock_tests.rs  gmail_api_tests.rs  gmail_draft_tests.rs  gmail_message_tests.rs  gmail_parsing_edge_tests.rs  gmail_simple_test.rs  helper.rs  integration_tests.rs  logging_final_coverage_tests.rs  logging_module_tests.rs  main_tests.rs  mock_client.rs  mock_enhancement_tests.rs  parameterized_test_example.rs  people_api_mock_tests.rs  people_api_tests.rs  property_tests.rs  security_tests.rs  server_sse_tests.rs  server_tests.rs  test_macros.rs  test_macros_example.rs  token_cache_interactions_tests.rs  token_cache_tests.rs  token_exchange_tests.rs  token_gmail_tests.rs  token_refresh_expiry_tests.rs  token_refresh_tests.rs  unit_tests.rs  (+4 more)
