[package]
name = "mcp-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-attr = "0.0.5"
tokio = { version = "1.44.1", features = ["full"] }
gmail = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
thiserror = "1.0"
log = "0.4"
chrono = "0.4"
simplelog = "0.12"
lazy_static = "1.4"
env_logger = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
