[package]
name = "mcp-gmailcal"
version = "0.5.0"
edition = "2021"

[dependencies]
mcp-attr = "0.0.5"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
simplelog = "0.12"
lazy_static = "1.4"
env_logger = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
clap = { version = "4.5", features = ["derive"] }
axum = "0.7"
url = "2.5"
webbrowser = "0.8"
rand = "0.8"
base64 = "0.13"
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
mockall = "0.11.4"
